<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="50dp"
    tools:context=".ui.registerlogin.WelcomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/undraw_personal_finance_tqcd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/text_style_R32_black_xxdark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/welcome_image"
        app:layout_constraintRight_toRightOf="@id/welcome_image"
        app:layout_constraintTop_toBottomOf="@+id/welcome_image" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/text_style_M15_xdark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_message"
        app:layout_constraintLeft_toLeftOf="@+id/welcome_image"
        app:layout_constraintRight_toRightOf="@+id/welcome_image"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:background="@color/green"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="@+id/welcome_image"
        app:layout_constraintRight_toRightOf="@+id/welcome_image"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_medium"
        android:background="@color/green"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="@+id/welcome_image"
        app:layout_constraintRight_toRightOf="@+id/welcome_image"
        app:layout_constraintTop_toBottomOf="@id/signin"
        app:strokeColor="@color/green" />

</androidx.constraintlayout.widget.ConstraintLayout>